--- a/TaskFlow/sonar-project.properties
+++ b/TaskFlow/sonar-project.properties
@@ -1,7 +1,7 @@
-sonar.projectKey=project:TaskFlow
+sonar.projectKey=TaskFlow
 sonar.login=admin
-sonar.password=salah
-sonar.projectName=TaskFflow
+sonar.password=0000
+sonar.projectName=TaskFlow
 sonar.projectVersion=1.0
 sonar.sources=.
 
@@ -9,4 +9,4 @@ sonar.language=java
 sonar.inclusions=**/*.java
 
 sonar.exclusions=**/*Test*.java
-sonar.java.binaries="**/classes/**"
+sonar.java.binaries=target/classes
