--- a/TaskFlow/pom.xml
+++ b/TaskFlow/pom.xml
@@ -99,7 +99,14 @@
             <version>5.8.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
